vcs: ChangesUtil - migrate Stream to JBIterable
GitOrigin-RevId: dfcddb7c9a81496555e2c030d74ce123072eb95e